Stop ellipsing
The text clipped with a  ellipsis cannot be searched on Safari.

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -334,7 +334,6 @@ a .post h3 {
 .showcase p {
   font-size: var(--font-size-small);
   overflow-x: clip;
-  text-overflow: ellipsis;
   text-wrap: nowrap;
 }
 
